syntax = "proto3";

package embedding;

option go_package = "./proto";

service EmbeddingService {
  rpc GetEmbedding (EmbeddingRequest) returns (EmbeddingResponse) {}
}

message EmbeddingRequest {
  string text = 1;
}

message EmbeddingResponse {
  repeated float embedding = 1;
}


//python -m pip install grpcio
//python -m pip install grpcio-tools
//python -m grpc_tools.protoc -I=. --python_out=. --grpc_python_out=. ./proto/embedding.proto

//go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
//go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
//protoc --go_out=. --go-grpc_out=. ./proto/embedding.proto

// protoc --go_out=. --go_opt=paths=source_relative \
//    --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//    proto/embedding.proto